security-openapi.yaml was updated
